--- a/style.css
+++ b/style.css
@@ -1,4 +1,8 @@
- html {
+@media all 
+and (min-width: 200px)
+and (max-width: 400px)
+
+html {
   height: 100%;
   width: 100%;
 }
@@ -67,7 +71,7 @@ nav .contact {
 }
 
 li .contact {
-  width: 130px;
+  width: 20%;
   height: 35px;
   padding: 8px 16px;
   align-items: center;
@@ -90,7 +94,7 @@ li .contact {
 }
 
 .recipe section {
-  width: 444px;
+  width: 40%;
   padding: 24px;
   background-color: #ffffff;
   border-radius: 24px;
@@ -143,14 +147,11 @@ button {
 }
 
 .trendingpage section {
-  float: left;
   width: 20%;
 }
 
 .trending {
-  margin-top: 150px;
-  margin-left: 50px;
-  margin-right: 400px;
+  margin-top: 20px;
 }
 
 .button2 a {
@@ -170,8 +171,8 @@ button {
   background-repeat: no-repeat;
   height: 401.193px;
   padding: 36px 30px;
-  margin-top: 20px;
-  width: 20%;
+  margin-top: 10px;
+  width: 100%;
 }
 
 .boluclac h1 {
@@ -201,7 +202,7 @@ button {
   height: 401.193px;
   padding: 36px 30px;
   margin-top: 20px;
-  width: 20%;
+  width: 100%;
 }
 
 .boluclac2 h1 {
@@ -227,7 +228,7 @@ button {
 }
 
 .aboutme {
-  width: 90%;
+  width: 100%;
   height: 363px;
   padding: 24px;
   background-color: #FFD8CC;
@@ -237,16 +238,14 @@ button {
   margin-bottom: 30px;
 }
 
-.aboutme .avatar {
-  float: left;
+.aboutme .avatar {;
   width: 20%;
   margin-left: 20px;
   margin-top: 20px;
-  margin-bottom: 40px;
+  margin-bottom: 10px;
 }
 
 .introduction {
-  float: left;
   width: 40%;
   padding-left: 450px;
   padding-top: 40px;
