--- a/aboutstyle.css
+++ b/aboutstyle.css
@@ -1,3 +1,6 @@
+@media all 
+and (max-width: 430px)
+
 html {
   height: 100%;
   width: 100%;
@@ -143,18 +146,15 @@ button {
 }
 
 .avatar {
-  float: left;
   margin-top: 24px;
-  margin-left: 64px;
+  margin-left: auto;
 }
 
 .about{
-  clear: right;
   padding: 32px;
   border-radius: 40px;
   background-color: #FFD8CC;
-  width: 534px;
-  margin-left: 600px;
+  width: 100%;
 }
 
 .about h2{
@@ -176,7 +176,7 @@ button {
   padding: 40px;
   width: 100%;
   background-color: #FFD8CC;
-  
+
 }
 
 .bunbobae h1{
@@ -216,17 +216,17 @@ button {
 }
 
 .rice{
-  
+
   float:left;
 }
 
 .cheesecake{
-  
+
   float:left;
 }
 
 .cookie{
- 
+
   float: left;
 }
 
@@ -235,10 +235,6 @@ button {
   padding: 24px;
   border-radius: 40px;
   background: #FAE1DD;
-}
-
-.rice{
-  margin-left: 300px;
 }
 
 .rice p{
@@ -439,7 +435,5 @@ footer a{
 .clear {
   clear: both;
 }
-
-
 
 
